fix:build types error
